completed the signup route and controller

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=4000
 JWT_KEY="PARTH'S_KEY"
 ORIGIN="http://localhost:5173"
-MONGODB_URL="mongodb+srv://abhangparth:ParthChat@chatcluster.ikkpk.mongodb.net/?retryWrites=true&w=majority&appName=chatcluster"
+MONGODB_URL="mongodb+srv://abhangparth:ParthChat@chatcluster.ikkpk.mongodb.net/Chat?retryWrites=true&w=majority&appName=chatcluster"
